base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: min-app
spec:
  selector:
    matchLabels:
      app: min-app
  replicas: 2
  template:
    metadata:
      labels:
        app: min-app
    spec:
      containers:
        - name: min-app
          image: ghcr.io/progitas/kube-hello
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
