base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: kube.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: min-app-service
                port:
                  number: 3000
